<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="@drawable/lessons_layout_bg"
    android:orientation="vertical"
    android:stateListAnimator="@animator/lesson_selection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/timeTV_placeholder" />

        <TextView
            android:id="@+id/subjectNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/subjectNameTV_placeholder"
            android:textAppearance="?attr/textAppearanceHeadline5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_linear_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teacherTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacherTV_placeholder"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"/>
        <TextView
            android:id="@+id/locationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationTV_placeholder"
            android:layout_marginHorizontal="@dimen/fab_margin"/>
        <TextView
            android:id="@+id/subjectTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjectTypeTV_placeholder"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginHorizontal="@dimen/fab_margin"/>
    </LinearLayout>

</LinearLayout>