<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimetableFragment">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previousDayButton"
            android:layout_marginTop="22dp"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:text="@string/navigate_before_text"
            android:onClick="previousDayAction"/>

    <TextView
        android:id="@+id/monthYearTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:text="@string/currentDateText" />

    <Button
        android:id="@+id/nextDayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:text="@string/navigate_next_text"
        android:onClick="nextDayAction"/>

</FrameLayout>