<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timetablepageRowModel"
            type="com.leenz.pnrpu.models.pagesmodels.TimetablepageRowModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearTimetableCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/timeButton"
            style="@style/btnSolidRounded"
            android:layout_width="@dimen/_63pxh"
            android:layout_height="@dimen/_33pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            android:text="@string/lbl_8_00"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lbl_8_00" />

        <LinearLayout
            android:id="@+id/linearSubjectCard"
            style="@style/groupStylewhite_1"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6pxh"
            android:layout_weight="0.8"
            android:background="@color/white_A700"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/timeButton"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/lessonNameRowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_marginEnd="@dimen/_4pxh"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lessonNameTV"
                    style="@style/txtRobotoromanmedium14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.81"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:text="@{timetablepageRowModel.lessonName}"
                    tools:text="@string/msg2" />

                <TextView
                    android:id="@+id/lessonTypeTV"
                    style="@style/txtSolidRounded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_42pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_weight="0.19"
                    android:ellipsize="end"
                    android:letterSpacing="0.0"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_3pxv"
                    android:paddingEnd="@dimen/_9pxh"
                    android:paddingBottom="@dimen/_3pxv"
                    android:singleLine="true"
                    android:text="@{timetablepageRowModel.lessonType}"
                    android:textColor="#BF360C"
                    tools:text="@string/lbl2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowellipseone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginBottom="@dimen/_6pxv"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/teacherAvatarCircle"
                    android:layout_width="@dimen/_24pxh"
                    android:layout_height="@dimen/_24pxh"
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_12"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/lessonProfessorNameTV"
                    style="@style/txtRobotoromanmedium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:ellipsize="end"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{timetablepageRowModel.lessonProfessorName}"
                    tools:text="@string/lbl3" />

                <ImageView
                    android:id="@+id/dotElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_ellipse961"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_ellipse961" />

                <TextView
                    android:id="@+id/lessonLocationTV"
                    style="@style/txtRobotoromanmedium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{timetablepageRowModel.lessonLocation}"
                    tools:text="@string/lbl_201" />
            </LinearLayout>
            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/linearSubjectCard"-->
            <!--                android:background="@color/gray_400" />-->

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>